[project]
name = "natural-capital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastai>=2.8.5",
    "fastapi>=0.121.2",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "imbalanced-learn",
    "ipykernel>=7.1.0",
    "lazrs>=0.8.1",
    "leafmap>=0.57.9",
    "localtileserver>=0.10.6",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "panel>=1.8.3",
    "pylas>=0.4.3",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "rio-tiler>=7.9.2",
    "rioxarray>=0.20.0",
    "scikit-image>=0.26.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "xarray>=2025.11.0",
]
